external-crates/move/crates/move-compiler/tests/move_check/parser/address_too_long_exp.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01005]: invalid address
  ┌─ tests/move_check/parser/address_too_long_exp.move:4:18
  │
4 │         let x = @0x112233445566778899101122334455667788992011223344556677889930112233; x;
  │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid address literal. The numeric value is too large. The maximum size is 32 bytes
